--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
     "version": "1.0.0",
     "description": "",
     "main": "recipe.js",
+    "type": "module",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "ejs": "^3.1.7",
-      "express": "^4.17.3",
-      "http": "^0.0.1-security",
-      "nodemon": "^2.0.15",
-      "dotenv": "^16.0.0",
-      "mongodb": "^4.5.0"
+        "async-lock": "^1.3.1",
+        "dotenv": "^16.0.0",
+        "ejs": "^3.1.7",
+        "express": "^4.17.3",
+        "http": "^0.0.1-security",
+        "mongodb": "^4.5.0",
+        "node-fetch": "^3.2.4",
+        "nodemon": "^2.0.15",
+        "semaphore": "^1.1.0",
+        "url": "^0.11.0"
     }
-  }
+}
