--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node recipe.js"
+        "start": "node recipe.js 3102"
     },
     "author": "",
     "license": "ISC",
